--- a/src/main/resources/assets/Meow/lang/en_us.json
+++ b/src/main/resources/assets/Meow/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "text.autoconfig.Meow.title": "Config Title",
-  "text.autoconfig.Meow.option.test": "Boolean test"
+  "text.autoconfig.Meow.option.MeowMode": "MeowMode"
 }
