--- a/src/main/resources/assets/meow/lang/en_us.json
+++ b/src/main/resources/assets/meow/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "text.autoconfig.Meow.title": "Config Title",
-  "text.autoconfig.Meow.option.MeowMode": "MeowMode"
+  "text.autoconfig.Meow.option.MeowMode": "MeowMode",
+  "text.autoconfig.Meow.option.Filter": "Filter"
 }
