--- a/src/main/resources/assets/meow/lang/en_us.json
+++ b/src/main/resources/assets/meow/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "text.autoconfig.Meow.title": "Config Title",
   "text.autoconfig.Meow.option.MeowMode": "MeowMode",
-  "text.autoconfig.Meow.option.Filter": "Filter"
+  "text.autoconfig.Meow.option.Filter": "Filter",
+  "text.autoconfig.Meow.option.Replacement": "Replacement",
+  "text.autoconfig.Meow.option.Suffix": "Suffix"
 }
