--- a/src/main/resources/assets/meow/lang/en_us.json
+++ b/src/main/resources/assets/meow/lang/en_us.json
@@ -1,10 +1,9 @@
 {
   "text.autoconfig.Meow.title": "Config Title",
   "text.autoconfig.Meow.option.MeowMode": "MeowMode",
-  "text.autoconfig.Meow.option.Filter": "Filter",
-  "text.autoconfig.Meow.option.Replacement1": "Replacement1",
-  "text.autoconfig.Meow.option.Replacement2": "Replacement2",
+  "text.autoconfig.Meow.option.Replace": "Replace",
+  "text.autoconfig.Meow.option.CharModify": "Char modify",
+  "text.autoconfig.Meow.option.ReplacementList": "Replacement list",
   "text.autoconfig.Meow.option.Suffix": "Suffix",
-  "text.autoconfig.Meow.option.Regex1": "Regex1",
-  "text.autoconfig.Meow.option.Regex2": "Regex2"
+  "text.autoconfig.Meow.option.RegexList": "Regex list"
 }
