--- a/src/main/resources/assets/meow/lang/en_us.json
+++ b/src/main/resources/assets/meow/lang/en_us.json
@@ -2,6 +2,7 @@
   "text.autoconfig.Meow.title": "Config Title",
   "text.autoconfig.Meow.option.MeowMode": "MeowMode",
   "text.autoconfig.Meow.option.Replace": "Replace",
+  "text.autoconfig.Meow.option.PlayerScale": "Player scale",
   "text.autoconfig.Meow.option.CharModify": "Char modify",
   "text.autoconfig.Meow.option.IgnoreChar": "Ignore char",
   "text.autoconfig.Meow.option.ReplacementList": "Replacement list",
